<resources>
    <string name="app_name">PLAN NUTRICIONAL</string>
    <string name="plan_nutricional">PLAN NUTRICIONAL</string>
    <string name="plan_nutricional_text">Este plan nutricional ha sido elaborado de acuerdo a sus
        necesidades, por lo tanto, es exclusivamente para usted.</string>
    <string name="date">FECHA</string>
    <string name="hint_date">inserte fecha&#8230;</string>
    <string name="name">NOMBRES Y APELLIDOS</string>
    <string name="hint_name">inserte nombres y apellidos&#8230;</string>
    <string name="weigth">PESO (Kg)</string>
    <string name="hint_weigth">inserte peso&#8230;</string>
    <string name="size">TALLA (Cm)</string>
    <string name="hint_size">inserte talla&#8230;</string>
    <string name="imc">IMC</string>
    <string name="hint_imc">inserte imc&#8230;</string>
    <string name="ref_weigth">PESO REFERENCIA (Kg)</string>
    <string name="hint_ref_weigth">inserte paso referencia&#8230;</string>
    <string name="goal_weigth">PESO META (Kg)</string>
    <string name="hint_goal_weigth">inserte peso meta&#8230;</string>
    <string name="footer">FAVOR PRESENTAR ESTE PLAN EN CADA CONTROL</string>
    <string name="ed_logo">Edner Mobile</string>
    <string name="button_edit">Editar</string>
    <string name="button_save">Guardar</string>
    <string name="error_save">Campo %1$s Vacio, por favor llene este campo y proceda a guardar</string>
    <string name="done_save">Informacion guardada satisfactoriamente</string>
    <string name="button_cancel">Cancelar</string>
    <string name="action_recommendations">Recomendaciones&#8230;</string>
    <string name="action_switch_workouts">Cambiar a Ejercicios&#8230;</string>
    <string name="title_recommendations">Recomendaciones Sobrepeso y Obesidad</string>
    <string name="dot">\u2022</string>
    <string name="rule_1">Pensar siempre si lo que come le aporta beneficios para su salud.</string>
    <string name="rule_2">Comer de forma equilibrada los alimentos de todos los grupos, para asegurar
        una dieta variada y sana.</string>
    <string name="rule_3">Evitar omitir el desayuno, es la comida que activa el metabolismo.</string>
    <string name="rule_4">Respetar los horarios de comida; recuerde que como minimo hay que hacer
        5 comidas al dia: desayuno, media mañana, almuerzo, algo, comida.</string>
    <string name="rule_5">Incluir en la alimentacion 5 raciones de frutas y verduras para garantizar
        una buena salud: una apropiada distribucion de la fruta es comerla en la media mañana y algo;
        los jugos naturales en el almuerzo y la comida. Las verduras consumirlas minimo 1/2 pocillo
        chocolatero en almuerzo y comida.</string>
    <string name="rule_6">Controlar el consumo de harinas refinadas como pan blanco, galletas de soda,
        pasteles; prefiera los alimentos integrales no por que tengan menos calorias sino por que
        aportan mas nutrientes, antioxidantes y fibra.</string>
    <string name="rule_7">Moderar el consumo de comidas rapidas como pizza, hamburguesas, papas
        fritas, mecatos. Son alimentos que aportan grandes cantidades de azucar, sal y grasas saturadas,
        elementos que se recomienda consumir de forma ocasional, debido a su relacion con algunas
        enfermedades como obesidad, diabetes e hipertension.</string>
    <string name="rule_8">Evitar bebidas tipo refrescos instantaneos, jugos de caja, gaseosas, maltas,
        bebidas achocolatadas y te comerciales, por su alto contenido de azucares; un solo refresco
        de los mencionoados puede llegar a contener hasta 8 cucharadas de azucar (cada cucharada de
        azucar equivale a 5g).</string>
    <string name="rule_9">Aprender a leer las etiquetas nutricionales para saber que se esta consumiendo:\n
        Lo mas importante antes que las calorias es revisar el tamaño de porcion, a veces un paquete
        puede contener varias porciones.\n El contenido de azucar ideal no debe exceder 7g y el
        contenido de sodio no debe exceder 200mg.\n Cuando un producto dice "sin azucar adicionada", debe
        mirar los ingredientes, y si refiere jarabe de maiz, syrup, miel, o fructosa, puede llegar a
        ser mas dañino que la misma azucar refinada.</string>
    <string name="rule_10">Evitar azucar, panela o miel para enulzar, una buena opcion es reemplazarlas
        por endulzantes no caloricos.</string>
    <string name="rule_11">Si aparece ansiedad por dulce, se recomienda fruta o gelatina dietetica o
        chocolatina dietetica que no exceda 25 calorias, o 2 cucharadas de fruta deshidratada, esto se
        recomienda maximo 2 veces al dia de ser necesario.</string>
    <string name="rule_12">Complementar una alimentacion saludable con actividad fisica o deportes
        tiena mejores resultados para la salud y el estado nutricional.</string>
    <string name="title_activity_daily_plan">PLAN DIARIO DE ALIMENTACION</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="breakfast">DESAYUNO</string>
    <string name="snack">MEDIA MAÑANA</string>
    <string name="lunch">ALMUERZO</string>
    <string name="some">ALGO</string>
    <string name="meal">COMIDA</string>
    <string name="dinner">MERIENDA</string>
    <string name="milk">LACTEO</string>
    <string name="hint_milk">inserte numero de lacteo&#8230;</string>
    <string name="chesse_or">QUESO O SUSTITUTOS</string>
    <string name="hint_chesse_or">inserte numero de quesos o sustitutos&#8230;</string>
    <string name="flour">HARINA</string>
    <string name="hint_flour">inserte numero de harina&#8230;</string>
    <string name="fruit">FRUTA</string>
    <string name="hint_fruit">inserte numero de fruta&#8230;</string>
    <string name="fat">GRASA</string>
    <string name="hint_fat">inserte numero de grasa&#8230;</string>
    <string name="sugar">AZUCAR</string>
    <string name="hint_sugar">inserte numero de azucar&#8230;</string>
    <string name="milks">LACTEOS</string>
    <string name="cheese_and">QUESO Y SUSTITUTOS</string>
    <string name="meat">CARNES</string>
    <string name="cereal_or">CEREALES o HARINAS</string>
    <string name="leguminous">LEGUMINOSAS</string>
    <string name="vegetables">VERDURAS</string>
    <string name="fruits">FRUTAS</string>
    <string name="sugar_and">AZUCARES Y DULCES</string>
    <string name="fats">GRASAS</string>

    <string name="milk_prompt">Elije un Lacteo</string>
    <string-array name="milk_array">
        <item>Elije un Lacteo</item>
        <item>Leche - Descremada - 1 vaso pequeño</item>
        <item>Kogurt - Descremada - 1 vaso pequeño</item>
        <item>Kumis - Descremada - 1 vaso pequeño</item>
        <item>Bebidas de soya - Descremada - 1 vaso pequeño</item>
        <item>Leche en polvo - 3 cucharadas rasas</item>
        <item>Helado dietetico - 1 porcion</item>
    </string-array>
    <string name="chesse_or_prompt">Elije un Queso o un Sustituto</string>
    <string-array name="chesse_or_array">
        <item>Elije un Queso o un Sustituto</item>
        <item>Huevo - 1 vaso pequeño</item>
        <item>Huevo de codorniz - 1 vaso pequeño</item>
        <item>Quesito - 1 tajada delgada</item>
        <item>Quesito campesino - 1 tajada delgada</item>
        <item>Cuajada - 1 tajada delgada</item>
        <item>Queso mozzarella - 1 tajada delgada</item>
        <item>Mortadela - 1 tajada delgada</item>
        <item>Jamon - 1 tajada delgada</item>
        <item>Jamon pietran - 1 tajada delgada</item>
        <item>Salchicha - 1 unidad</item>
        <item>Salchichon - 1 rebanada</item>
    </string-array>
    <string name="flour_prompt">Elije una Harina</string>
    <string-array name="flour_array">
        <item>Elije una Harina</item>
        <item>Leche - Descremada - 1 vaso pequeño</item>
        <item>Kogurt - Descremada - 1 vaso pequeño</item>
        <item>Kumis - Descremada - 1 vaso pequeño</item>
        <item>Bebidas de soya - Descremada - 1 vaso pequeño</item>
        <item>Leche en polvo - 3 cucharadas rasas</item>
        <item>Helado dietetico - 1 porcion</item>
    </string-array>
    <string name="fruit_prompt">Elije una Fruta</string>
    <string-array name="fruit_array">
        <item>Elije una Fruta</item>
        <item>Huevo - 1 vaso pequeño</item>
        <item>Huevo de codorniz - 1 vaso pequeño</item>
        <item>Kumis - Descremada - 1 vaso pequeño</item>
        <item>Bebidas de soya - Descremada - 1 vaso pequeño</item>
        <item>Leche en polvo - 3 cucharadas rasas</item>
        <item>Helado dietetico - 1 porcion</item>
    </string-array>
    <string name="fat_prompt">Elije una Grasa</string>
    <string-array name="fat_array">
        <item>Elije una Grasa</item>
        <item>Leche - Descremada - 1 vaso pequeño</item>
        <item>Kogurt - Descremada - 1 vaso pequeño</item>
        <item>Kumis - Descremada - 1 vaso pequeño</item>
        <item>Bebidas de soya - Descremada - 1 vaso pequeño</item>
        <item>Leche en polvo - 3 cucharadas rasas</item>
        <item>Helado dietetico - 1 porcion</item>
    </string-array>
    <string name="sugar_prompt">Elije un Azucar o un Dulce</string>
    <string name="action_configurations">Configuraciones&#8230;</string>
    <string name="toast_switch">CAMBIA DE NUTRICION A EJERCICIOS</string>
    <string name="milk_avaible">LACTEOS DISPONIBLES</string>
    <string name="milk_milk">Leche</string>
    <string name="item">Item</string>
    <string name="cal_desc">Description</string>
    <string name="dialog_fire_missiles">Fire Missiles?</string>
    <string name="fire">FIRE</string>
    <string name="cancel">CANCEL</string>
    <string name="ok">OK</string>
    <string name="dialog_title_calendar">Event Calendar</string>
    <string name="dialog_message_calendar">Click to schedule or view events.</string>
    <string-array name="sugar_array">
        <item>Elije un Azucar o un Dulce</item>
        <item>Huevo - 1 vaso pequeño</item>
        <item>Huevo de codorniz - 1 vaso pequeño</item>
        <item>Kumis - Descremada - 1 vaso pequeño</item>
        <item>Bebidas de soya - Descremada - 1 vaso pequeño</item>
        <item>Leche en polvo - 3 cucharadas rasas</item>
        <item>Helado dietetico - 1 porcion</item>
    </string-array>

    <string-array name="accordion_sections">
        <item>Section A</item>
        <item>Section B</item>
        <item>Section C</item>
        <item>Section D</item>
        <item>Section E</item>
    </string-array>

    <integer-array name="accordion_visibility">
        <item>1</item>
        <item>1</item>
        <item>0</item>
        <item>0</item>
        <item>0</item>
    </integer-array>
    <string name="title_activity_config">Configuration Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_configuration">Configuration Activity</string>

</resources>
